<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".UserFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginTop="32dp"
            android:text="@string/tvUser"
            android:textColor="@color/text"
            android:textSize="48sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/etName"
            android:textColor="@color/text"
            android:textSize="24sp"
            android:layout_below="@id/tvUser"

            android:layout_marginTop="32dp"/>

        <EditText
            android:id="@+id/etMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etName"
            android:textColor="@color/text"
            android:layout_marginTop="32dp"
            android:hint="@string/etMail"
            android:textSize="24sp" />
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/text"
            android:backgroundTint="@color/btnPrimary"
            android:layout_below="@id/tUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"/>
    </LinearLayout>
</FrameLayout>