<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/bgPrimary"
    tools:context=".MainActivity">

    <!-- Image -->
    <ImageView
        android:id="@+id/IvUser"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        app:srcCompat="@drawable/user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/IvUser"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/EtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="27dp"
            android:minHeight="48dp"
            android:hint="@string/etName" />

        <EditText
            android:id="@+id/EtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:minHeight="48dp"
            android:hint="@string/etMail" />

        <EditText
            android:id="@+id/EtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EtUser"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:minHeight="48dp"
            android:hint="@string/etPass" />


        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/btnPrimary"
            android:textSize="18sp"
            android:text="@string/btnRegister"
            android:textColor="#FFFFFF" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EtPass"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/btnSecondary"
            android:textSize="18sp"
            android:onClick="Login"
            android:text="@string/btnLogin" />

    </LinearLayout>
</RelativeLayout>
