<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <!-- Image -->
    <ImageView
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:id="@+id/IvUser"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="1dp"
    app:srcCompat="@drawable/user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/IvUser"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/EtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="27dp"
            android:minHeight="48dp"
            android:hint="@string/etMail" />

        <EditText
            android:id="@+id/EtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EtUser"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:minHeight="48dp"
            android:hint="@string/etPass" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EtPass"
            android:backgroundTint="#27AE60"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:textSize="18sp"
            android:onClick="Login"
            android:text="@string/btnLogin" />

        <!-- Register Button -->
        <Button
            android:id="@+id/btnRegister"
            android:backgroundTint="#27AE60"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="50dp"
            android:textSize="18sp"
            android:layout_marginStart="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegister"
            android:textColor="#FFFFFF"
            />

    </LinearLayout>
</RelativeLayout>
