<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgPrimary"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/text"
            android:textSize="26sp" />


        <ImageView
            android:id="@+id/ivSample"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_below="@id/tvTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivSample"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="80dp"
            android:textColor="@color/text"
            android:text="@string/tvWelcome"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWelcome"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="24dp">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:backgroundTint="@color/btnPrimary"
                android:text="@string/btnStart"
                android:contentDescription=""
                android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>