<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvPractice"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>


    <TextView
        android:id="@+id/tvWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCategories"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/tvWord"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWord"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="16dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BtnOp1"
            android:text="@string/btnOp1"
            android:backgroundTint="#27AE60"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BtnOp2"
            android:text="@string/btnOp2"
            android:backgroundTint="#27AE60"
            android:layout_marginTop="8dp"
            android:textColor="#FFFFFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BtnOp3"
            android:text="@string/btnOp3"
            android:layout_marginTop="8dp"
            android:backgroundTint="#27AE60"
            android:textColor="#FFFFFF" />
        <ImageButton
            android:id="@+id/btnV"
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:layout_marginTop="20dp"
            android:contentDescription="User"
            android:background="@android:color/transparent"
            android:src="@drawable/voicei"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@android:color/transparent"
                android:contentDescription="User"
                android:src="@drawable/useri"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="learn"
                android:background="@android:color/transparent"
                android:src="@drawable/learn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn3"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="home"
                android:background="@android:color/transparent"
                android:src="@drawable/home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn4"
                android:background="@android:color/transparent"
                android:layout_width="68dp"
                android:layout_height="72dp"
                android:contentDescription="Progress"
                android:src="@drawable/progress" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>