<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="26sp" />


    <ImageView
        android:id="@+id/ivSample"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivSample"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="80dp"
        android:text="@string/tvWelcome"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWelcome"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnStart"
            android:contentDescription=""
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn1"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@android:color/transparent"
                android:contentDescription="User"
                android:src="@drawable/useri"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn2"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="learn"
                android:background="@android:color/transparent"
                android:src="@drawable/learn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn3"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:contentDescription="home"
                android:background="@android:color/transparent"
                android:src="@drawable/home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn4"
                android:background="@android:color/transparent"
                android:layout_width="68dp"
                android:layout_height="72dp"
                android:contentDescription="Progress"
                android:src="@drawable/progress" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>